samples/_failures_safe/1761127744_b96e1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_280c7b89.c: In function ‘process_log_file’:
./samples/SAFE/__tmp_280c7b89.c:120:5: error: expected expression at end of input
  120 |     if (!analyzer || !
      |     ^~
./samples/SAFE/__tmp_280c7b89.c:120:5: error: expected declaration or statement at end of input
